# sqat-example

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
binder/: postBuild
docs/: conf.py
src/sqat_example/: __init__.py
tests/: test_package.py
