[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "sqat_example"
authors = [
  { name = "Henry Schreiner", email = "henryfs@princeton.edu" },
]
description = "A great package."
readme = "README.md"
requires-python = ">=3.10"
license = "bsd-3-clause"
license-files = ["LICENSE"]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/henryiii/sqat-example"
"Bug Tracker" = "https://github.com/henryiii/sqat-example/issues"
Discussions = "https://github.com/henryiii/sqat-example/discussions"
Changelog = "https://github.com/henryiii/sqat-example/releases"


[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=3",
]
dev = [
  { include-group = "test" },
]
docs = [
  "Sphinx>=7.0",
  "myst_parser>=3.0",
  "sphinx-book-theme>=1.0",
  "sphinx_copybutton",
]


[tool.hatch]
version.path = "src/sqat_example/__init__.py"


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = ["error"]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.mypy]
files = "src"
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]


[tool.pylint]
py-version = "3.10"
ignore-paths= ["src/sqat_example/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
